--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    .scrollbar::-webkit-scrollbar {
+      width: 5px;
+      height: 5px;
+    }
+  
+    .scrollbar::-webkit-scrollbar-track {
+      border-radius: 100vh;
+      background: #000000;
+    }
+  
+    .scrollbar::-webkit-scrollbar-thumb {
+      background: #01A140;
+      border-radius: 100vh;
+      /* border: 3px solid #f6f7ed; */
+    }
+  
+    .scrollbar::-webkit-scrollbar-thumb:hover {
+      background: #1bbd29;
+    }
+}
